Actualizar título en index.html para reflejar el tema del curso

--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta name="description" content="Clase de diseño interactivo de software">
     <meta name="keywords" content="Diseño, Interactivo, Software">
     <meta name="author" content="Aaron Leon">
-    <title>Document</title>
+    <title>Ing. en Software | Diseño interactivo de software</title>
 </head>
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <section>
+            <h1></h1>
+            <p></p>
+            <article></article>
+            <aside></aside>
+            <div></div>
+        </section>
+    </main>
 </body>
 </html>
