Agregar carpetas css y js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Clase de diseño interactivo de software">
     <meta name="keywords" content="Diseño, Interactivo, Software">
     <meta name="author" content="Aaron Leon">
+    <link rel="stylesheet" href="css/style.css">
     <title>Ing. en Software | Diseño interactivo de software</title>
 </head>
 <body>
@@ -21,5 +22,6 @@
             <div></div>
         </section>
     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
