Agregar estilos básicos en style.css y estructurar el contenido en index.html

--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
     <title>Ing. en Software | Diseño interactivo de software</title>
 </head>
 <body>
+<main>
+<section>
     <header>
-        <nav></nav>
+        <h1 class="titulo">Curso de diseño interactivo</h1>
     </header>
-    <main>
-        <section>
-            <h1></h1>
-            <p></p>
-            <article></article>
-            <aside></aside>
-            <div></div>
-        </section>
-    </main>
+    <p class="texto">Para cambiar el tema de color da click aqui abajo</p>
+    <button>Cambiar color</button>
+</section>
+</main>
     <script src="js/script.js"></script>
 </body>
 </html>
