Agregar soporte para tema oscuro y mejorar interactividad del botón en style.css, index.html y script.js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="titulo">Curso de diseño interactivo</h1>
     </header>
     <p class="texto">Para cambiar el tema de color da click aqui abajo</p>
-    <button>Cambiar color</button>
+    <button>🌞 🌚 </button>
 </section>
 </main>
     <script src="js/script.js"></script>
