Agregar condicion para cambio de icono

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <title>Ing. en Software | Diseño interactivo de software</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <button></button>
+        </nav>
+    </header>
 <main>
 <section>
     <header>
-        <h1 class="titulo">Curso de diseño interactivo</h1>
+        <h1 class="titulo">Curso de diseño interactivo 💻 </h1>
     </header>
     <p class="texto">Para cambiar el tema de color da click aqui abajo</p>
-    <button>🌞 🌚 </button>
 </section>
 </main>
     <script src="js/script.js"></script>
